--- a/swiftcloud/package.json
+++ b/swiftcloud/package.json
@@ -23,11 +23,14 @@
     "@typescript-eslint/parser": "^6.7.0",
     "concurrently": "^8.2.1",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
